<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_projects"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_projects" />

    <item
        android:id="@+id/nav_volunteers"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_volunteers" />

    <item
        android:id="@+id/nav_funds"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_funds" />

    <item
        android:id="@+id/nav_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_about" />

</menu>
