<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.diplomsmkandroid.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_projects"
        android:name="com.example.diplomsmkandroid.ui.projects.ProjectsFragment"
        android:label="@string/nav_projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/nav_volunteers"
        android:name="com.example.diplomsmkandroid.ui.volunteers.VolunteersFragment"
        android:label="@string/nav_volunteers"
        tools:layout="@layout/fragment_volunteers" />

    <fragment
        android:id="@+id/nav_funds"
        android:name="com.example.diplomsmkandroid.ui.funds.FundsFragment"
        android:label="@string/nav_funds"
        tools:layout="@layout/fragment_funds" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.diplomsmkandroid.ui.about.AboutFragment"
        android:label="@string/nav_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.diplomsmkandroid.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.diplomsmkandroid.ui.admin.AdminFragment"
        android:label="@string/nav_admin"
        tools:layout="@layout/fragment_admin" />

</navigation>
